# ORacle

./: LICENSE  README.md  case_similarity.py  compute_normalization_stats.py  create_vocabs.py  evaluate_saved_model.py  generate_preop_embeddings.py  medication_episodes.py  pcrc_pipeline.py  preop_case_embeddings.py  pyproject.toml  quick_case_stats.py  requirements.txt  run_all_scales.sh  run_case_similarity.sh  scaling_data_loader.py  scaling_experiment.py  setup_wandb.sh  single_institution_experiment.py  slurm_case_stats.sh  slurm_compute_norm_stats.sh  slurm_evaluate_model.sh  slurm_medication_episodes.sh  slurm_preop_embeddings.sh  slurm_scaling_experiment.sh  slurm_single_institution.sh  visualize_case_embeddings.py
bolus_responses/: impulses.py
clinician_testing/: analyze_results.py  prepare_data.py  surg_renames.json
demo/: config.yaml  demo_data.feather  demo_results.csv  run_demo.py
params/: __init__.py  functions.py  params.py
preprocessing/: imputation_curation.py  keys.py  manual_curation.py  preprocess.py  preprocessing_util.py  process_notes.py  process_preop.py
transformer_model/autoreg/: bolus_utils.py  config.yaml  data_utils.py  decoder.py  eval_autoreg.py  evaluation_autoreg.py  fusion.py  intraop_dataset.py  logging_utils.py  model.py  multi_target_dataset.py  preprocessing_utils.py  run_autoreg_experiment.py  run_scripts.py  temporal_encoding.py  train_autoreg.py
transformer_model/hypotension/: config_hypo_cv1.yaml  create_hypo_labels.py  create_hypo_labels_vectorized.py  encoder.py  utils.py  (+7 more)
xgb_model/: evaluate_model.py  fit_model.py
(+8 files in other folders)
